# cellpipe

./: .gitignore  README.md  pyproject.toml
src/cellpipe/: __main__.py  annotater.py  arg_parser.py  cache_handler.py  celltypist_annotater.py  core.py  main.py  marker_parser.py  meta.py  processor.py  property_widgets.py  qt_helper.py  source_loader.py  summarizer.py  ui_arg.py  user_interface.py  visualizer.py
